--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -17,10 +17,10 @@ jobs:
         with:
           branch: v3.17
           packages: >
-            g++ curl zip unzip tar build-base musl ninja python3 make linux-headers openssl-dev git rpm-dev
+            g++ curl zip unzip tar build-base musl ninja python3 cmake make linux-headers openssl-dev git rpm-dev
             doxygen py3-sphinx py3-breathe py3-myst-parser py3-sphinx_rtd_theme graphviz
-      - name: UNAME
-        run: uname -m
+      - name: sh symbolic link
+        run: ln -s /bin/sh /usr/bin/sh
         shell: alpine.sh {0}
       - name: Restore artifacts, or setup vcpkg (do not install any package)
         uses: lukka/run-vcpkg@v10
