--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -26,9 +26,17 @@ jobs:
         uses: lukka/run-vcpkg@v10
         with:
           useShell: ${{ steps.alpine.outputs.root-path }}/abin/alpine.sh
-          vcpkgDirectory: '${{ steps.alpine.outputs.root-path }}/opt/vcpkg'
+#          vcpkgDirectory: '${{ steps.alpine.outputs.root-path }}/opt/vcpkg'
           # If not using a submodule for vcpkg sources, this specifies which commit
           # id must be checkout from a Git repo. It must not set if using a submodule
           # for vcpkg.
           vcpkgGitCommitId: '19af97cba8ca48474e4ad15a24ed50271a9ecdac'
           vcpkgJsonGlob: 'vcpkg.json'
+      - name: Run CMake consuming CMakePreset.json and vcpkg.json by mean of vcpkg.
+        uses: lukka/run-cmake@v10
+        with:
+          useShell: ${{ steps.alpine.outputs.root-path }}/abin/alpine.sh
+          cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
+          configurePreset: 'ci-${{ matrix.compiler }}-${{matrix.build_type}}'
+#          buildPreset: 'build-ci-${{ matrix.compiler }}-${{matrix.build_type}}'
+#          testPreset: 'test-ci-${{ matrix.compiler }}-${{matrix.build_type}}'
