--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -32,6 +32,11 @@ jobs:
           # for vcpkg.
           vcpkgGitCommitId: '19af97cba8ca48474e4ad15a24ed50271a9ecdac'
           vcpkgJsonGlob: 'vcpkg.json'
+      - name: where am I
+        run: |
+          pwd
+          ls -alh
+        shell: alpine.sh {0}
       - name: Run CMake consuming CMakePreset.json and vcpkg.json by mean of vcpkg.
         uses: lukka/run-cmake@v10
         with:
