--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -36,7 +36,8 @@ jobs:
         run: |
           pwd
           ls -alh
-          ls ..
+          ls ${{ github.workspace }}
+          echo "${{ github.workspace }}"
         shell: alpine.sh {0}
       - name: Run CMake consuming CMakePreset.json and vcpkg.json by mean of vcpkg.
         uses: lukka/run-cmake@v10
