--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -47,6 +47,6 @@ jobs:
         with:
           useShell: ${{ steps.alpine.outputs.root-path }}/abin/alpine.sh
 #          cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
-          configurePreset: 'ci-${{ matrix.compiler }}-${{matrix.build_type}}'
+          configurePreset: 'docs-gcc-debug'
 #          buildPreset: 'build-ci-${{ matrix.compiler }}-${{matrix.build_type}}'
 #          testPreset: 'test-ci-${{ matrix.compiler }}-${{matrix.build_type}}'
