--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -17,8 +17,7 @@ jobs:
         name: Alpine maker
         with:
           branch: v3.17
-          extra-repositories:
-            - http://dl-cdn.alpinelinux.org/alpine/edge/testing
+          extra-repositories: ["https://dl-cdn.alpinelinux.org/alpine/edge/testing"]
           packages: >
             g++ curl zip unzip tar build-base musl ninja python3 cmake make linux-headers openssl-dev git rpm-dev
             doxygen py3-sphinx py3-breathe py3-myst-parser py3-sphinx_rtd_theme graphviz
