--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -63,6 +63,8 @@ jobs:
           vcpkgJsonGlob: 'vcpkg.json'
       - name: Run raw cmake
         run: |
+          python -m breathe
+          echo foo
           cmake --workflow --preset packflow-gcc-debug
         shell: alpine.sh {0}
 
