--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -22,7 +22,7 @@ jobs:
             doxygen py3-sphinx py3-breathe py3-myst-parser py3-sphinx_rtd_theme graphviz
       - name: Get new cmake
         run: |
-          apk add cmake --repository=https://dl-cdn.alpinelinux.org/alpine/edge/main/
+          apk upgrade cmake --repository=https://dl-cdn.alpinelinux.org/alpine/edge/main/
         shell: alpine.sh --root {0}
 
       - name: Build ninja
