--- a/.github/workflows/alpine.yml
+++ b/.github/workflows/alpine.yml
@@ -60,16 +60,16 @@ jobs:
           # for vcpkg.
           vcpkgGitCommitId: '19af97cba8ca48474e4ad15a24ed50271a9ecdac'
           vcpkgJsonGlob: 'vcpkg.json'
-      - name: Run raw cmake
-        run: |
-          python --version
-          echo version
-          ls /usr/lib/
-          echo breathe
-          python -m breathe
-          echo foo
-          cmake --workflow --preset packflow-gcc-debug
-        shell: alpine.sh {0}
+#      - name: Run raw cmake
+#        run: |
+#          python --version
+#          echo version
+#          ls /usr/lib/
+#          echo breathe
+#          python -m breathe
+#          echo foo
+#          cmake --workflow --preset packflow-gcc-debug
+#        shell: alpine.sh {0}
 
       - name: Run CMake consuming CMakePreset.json and vcpkg.json by mean of vcpkg.
         uses: lukka/run-cmake@v10.3
