--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: 'ubuntu packaging'
+    name: ubuntu packaging
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
