--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -41,6 +41,10 @@ jobs:
           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
           workflowPreset: 'packflow-gcc-${{matrix.build_type}}'
 
+      - name: Test install
+        run: |
+          sudo dpkg -i build/pack-gcc-${{matrix.build_type}}/*.deb
+
       - name: Upload debian package
         uses: actions/upload-artifact@v3
         with:
