--- a/.github/workflows/static-packing.yml
+++ b/.github/workflows/static-packing.yml
@@ -66,6 +66,9 @@ jobs:
 
       - name: Test install
         run: |
+          pwd 
+          ls
+          ls build/pack-gcc-${{matrix.build_type}}
           sudo dpkg -i build/pack-gcc-${{matrix.build_type}}/*.deb
 
       - name: Upload debian package
