--- a/.github/workflows/static-packing.yml
+++ b/.github/workflows/static-packing.yml
@@ -66,10 +66,7 @@ jobs:
 
       - name: Test install
         run: |
-          pwd 
-          ls
-          ls build/pack-gcc-${{matrix.build_type}}
-          sudo dpkg -i build/pack-gcc-${{matrix.build_type}}/*.deb
+          sudo apt install build/pack-gcc-${{matrix.build_type}}-static/*.deb
 
       - name: Upload debian package
         uses: actions/upload-artifact@v3
