--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Test install
         run: |
-          sudo dpkg -i build/pack-gcc-${{matrix.build_type}}/*.deb
+          sudo apt install build/pack-gcc-${{matrix.build_type}}/*.deb
 
       - name: Upload debian package
         uses: actions/upload-artifact@v3
