--- a/.github/workflows/static-packing.yml
+++ b/.github/workflows/static-packing.yml
@@ -77,16 +77,17 @@ jobs:
           cmake --workflow --preset packflow-gcc-${{matrix.build_type}}-static
         shell: alpine.sh --root {0}
 
-      - name: Test install
-        run: |
-          ls build
-          sudo apt install build/pack-gcc-${{matrix.build_type}}-static/*.deb
-
       - name: Upload debian package
         uses: actions/upload-artifact@v3
         with:
           name: tfc-framework-${{matrix.build_type}}-static
           path: build/pack-gcc-${{matrix.build_type}}-static/*.deb
+
+      - name: Test install
+        run: |
+          ls build
+          sudo apt-get install ./build/pack-gcc-${{matrix.build_type}}-static/*.deb
+
       - name: Upload rpm package
         uses: actions/upload-artifact@v3
         with:
