--- a/.github/workflows/static-packing.yml
+++ b/.github/workflows/static-packing.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ubuntu_version: [18, 20, 22]
+        ubuntu_version: [20, 22]
         build_type: [ debug, release ]
     steps:
       - uses: actions/checkout@v3
