--- a/libs/confman/tests/CMakeLists.txt
+++ b/libs/confman/tests/CMakeLists.txt
@@ -21,4 +21,15 @@ add_test(
     confman_test
 )
 
+add_executable(read_only_test read_only_test.cpp)
+
+target_link_libraries(read_only_test PRIVATE tfc::confman Boost::ut glaze::glaze)
+
+add_test(
+  NAME
+    read_only_test
+  COMMAND
+    read_only_test
+)
+
 add_subdirectory(examples)
