--- a/.github/workflows/static-packing.yml
+++ b/.github/workflows/static-packing.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         ubuntu_version: [20, 22]
         build_type: [ debug, release ]
+        architecture: [ x86_64, aarch64 ]
     steps:
       - uses: actions/checkout@v3
       - uses: jirutka/setup-alpine@v1
@@ -75,6 +76,7 @@ jobs:
         shell: alpine.sh --root {0}
 
       - name: Test install
+        if: matrix.architecture == 'x86_64'
         run: |
           sudo apt-get install ./build/pack-gcc-${{matrix.build_type}}-static/*.deb
 
