--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,4 +52,4 @@ string(ASCII 27 Esc)
 set(ColourReset "${Esc}[m")
 set(Red         "${Esc}[31m")
 set(Green       "${Esc}[32m")
-message("${Green}Using ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}${ColourReset}")
+message("${Green}Using ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION} for ${CMAKE_SYSTEM_PROCESSOR}${ColourReset}")
