--- a/.github/workflows/ubuntu-packaging.yml
+++ b/.github/workflows/ubuntu-packaging.yml
@@ -14,11 +14,12 @@ jobs:
       fail-fast: false
       matrix:
         build_type: [debug, release]
+        architecture: [ x86_64, aarch64 ]
     steps:
       - name: install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install libsystemd-dev cppcheck lsb-release wget software-properties-common gnupg g++-12 curl ninja-build autoconf-archive doxygen python3-sphinx python3-sphinx-rtd-theme python3-breathe graphviz python3-myst-parser
+          sudo apt-get install libsystemd-dev cppcheck lsb-release wget software-properties-common gnupg g++-12 g++-12-arm-linux-gnueabi curl ninja-build autoconf-archive doxygen python3-sphinx python3-sphinx-rtd-theme python3-breathe graphviz python3-myst-parser
 
       - uses: actions/checkout@v3
       - name: commissioning
@@ -36,12 +37,21 @@ jobs:
           vcpkgJsonGlob: '${{ github.workspace }}/vcpkg.json'
 
       - name: Run CMake consuming CMakePreset.json and vcpkg.json by mean of vcpkg.
+        if: matrix.architecture == 'x86_64'
         uses: lukka/run-cmake@v10.3
         with:
           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
           workflowPreset: 'packflow-gcc-${{matrix.build_type}}'
 
+      - name: Pack it aarch64
+        if: matrix.architecture == 'aarch64'
+        uses: lukka/run-cmake@v10.3
+        with:
+          cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
+          workflowPreset: 'packflow-aarch64-gcc-${{matrix.build_type}}'
+
       - name: Test install
+        if: matrix.architecture == 'x86_64'
         run: |
           sudo apt-get install ./build/pack-gcc-${{matrix.build_type}}/*.deb
 
