--- a/.github/workflows/static-packing.yml
+++ b/.github/workflows/static-packing.yml
@@ -22,6 +22,7 @@ jobs:
         id: alpine
         name: Alpine maker
         with:
+          arch: ${{ matrix.architecture }}
           branch: v3.17
           packages: >
             g++ curl zip unzip tar build-base musl python3 cmake make linux-headers openssl-dev git rpm-dev autoconf-archive bash automake autoconf
@@ -71,17 +72,9 @@ jobs:
 
       # todo would be nice to use lukka/run-cmake but rpm needs root for some reason when packaging
       - name: Pack it
-        if: matrix.architecture == 'x86_64'
         run: |
           cmake --workflow --preset packflow-gcc-${{matrix.build_type}}-static
         shell: alpine.sh --root {0}
-
-      - name: Pack it aarch64
-        if: matrix.architecture == 'aarch64'
-        run: |
-          cmake --workflow --preset packflow-aarch64-gcc-${{matrix.build_type}}-static
-        shell: alpine.sh --root {0}
-
 
       - name: Test install
         if: matrix.architecture == 'x86_64'
