--- a/.github/workflows/static-packing.yml
+++ b/.github/workflows/static-packing.yml
@@ -29,6 +29,9 @@ jobs:
             doxygen py3-sphinx py3-breathe py3-myst-parser py3-sphinx_rtd_theme graphviz
       - name: Get new cmake
         run: |
+          ls /usr/bin
+          
+          
           apk upgrade cmake --repository=https://dl-cdn.alpinelinux.org/alpine/edge/main/
         shell: alpine.sh --root {0}
 
