--- a/.github/workflows/static-packing.yml
+++ b/.github/workflows/static-packing.yml
@@ -77,6 +77,8 @@ jobs:
       - name: Pack it
         run: |
           cmake --workflow --preset packflow-gcc-${{matrix.build_type}}-static
+          
+          cat /home/runner/work/framework/framework/vcpkg/buildtrees/libgpiod/autoconf-x64-linux-gcc-alpine-err.log
         shell: alpine.sh --root {0}
 
       - name: Test install
